FRET/RequirementParser.py
# Generated from Requirement.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RequirementParser ( Parser ):

    grammarFileName = "Requirement.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'requirement'", "':'", "'.'", "','", 
                     "'!'", "'~'", "'&'", "'V'", "'U'", "'|'", "'->'", "'=>'", 
                     "'<->'", "'<=>'", "'('", "')'", "'true'", "'false'", 
                     "'Y'", "'H'", "'O'", "'G'", "'X'", "'F'", "'['", "']'", 
                     "'^'", "'-'", "'*'", "'/'", "'+'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "AFTER", "ALWAYS", "AND", "AT", "BEFORE", "DURING", 
                      "EVENTUALLY", "EXCEPT", "FALSE", "FOR", "HOUR", "IF", 
                      "IMMEDIATELY", "IN", "IS", "MICROSECOND", "MILLISECOND", 
                      "MINUTE", "MOD", "MODE", "NEVER", "NEXT", "NOT", "OCCURRENCE", 
                      "OF", "ONLY", "OR", "PREVIOUS", "SATISFY", "SECOND", 
                      "SHALL", "THE", "THEN", "TICK", "TIMEPOINT", "TRUE", 
                      "UNLESS", "UNTIL", "UPON", "WHEN", "WHENEVER", "WHERE", 
                      "WHILE", "WITHIN", "XOR", "ID", "STRING", "RELATIONAL_OP", 
                      "NUMBER", "DIGITS", "REQT_ID", "WS" ]

    RULE_reqts = 0
    RULE_reqt = 1
    RULE_reqt_body = 2
    RULE_freeform = 3
    RULE_nasa = 4
    RULE_scope = 5
    RULE_reqt_condition = 6
    RULE_regular_condition = 7
    RULE_qualifier_word = 8
    RULE_qualified_condition1 = 9
    RULE_qualified_condition2 = 10
    RULE_scope_condition = 11
    RULE_scope_mode = 12
    RULE_pre_condition = 13
    RULE_stop_condition = 14
    RULE_component = 15
    RULE_response = 16
    RULE_satisfaction = 17
    RULE_timing = 18
    RULE_timing_aux = 19
    RULE_duration_upper = 20
    RULE_duration_lower = 21
    RULE_component_name = 22
    RULE_mode_name = 23
    RULE_duration = 24
    RULE_timeunit = 25
    RULE_post_condition = 26
    RULE_bool_expr = 27
    RULE_tl_expr = 28
    RULE_tl_intvl = 29
    RULE_numeric_expr = 30

    ruleNames =  [ "reqts", "reqt", "reqt_body", "freeform", "nasa", "scope", 
                   "reqt_condition", "regular_condition", "qualifier_word", 
                   "qualified_condition1", "qualified_condition2", "scope_condition", 
                   "scope_mode", "pre_condition", "stop_condition", "component", 
                   "response", "satisfaction", "timing", "timing_aux", "duration_upper", 
                   "duration_lower", "component_name", "mode_name", "duration", 
                   "timeunit", "post_condition", "bool_expr", "tl_expr", 
                   "tl_intvl", "numeric_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    AFTER=32
    ALWAYS=33
    AND=34
    AT=35
    BEFORE=36
    DURING=37
    EVENTUALLY=38
    EXCEPT=39
    FALSE=40
    FOR=41
    HOUR=42
    IF=43
    IMMEDIATELY=44
    IN=45
    IS=46
    MICROSECOND=47
    MILLISECOND=48
    MINUTE=49
    MOD=50
    MODE=51
    NEVER=52
    NEXT=53
    NOT=54
    OCCURRENCE=55
    OF=56
    ONLY=57
    OR=58
    PREVIOUS=59
    SATISFY=60
    SECOND=61
    SHALL=62
    THE=63
    THEN=64
    TICK=65
    TIMEPOINT=66
    TRUE=67
    UNLESS=68
    UNTIL=69
    UPON=70
    WHEN=71
    WHENEVER=72
    WHERE=73
    WHILE=74
    WITHIN=75
    XOR=76
    ID=77
    STRING=78
    RELATIONAL_OP=79
    NUMBER=80
    DIGITS=81
    REQT_ID=82
    WS=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ReqtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reqt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RequirementParser.ReqtContext)
            else:
                return self.getTypedRuleContext(RequirementParser.ReqtContext,i)


        def getRuleIndex(self):
            return RequirementParser.RULE_reqts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReqts" ):
                listener.enterReqts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReqts" ):
                listener.exitReqts(self)




    def reqts(self):

        localctx = RequirementParser.ReqtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_reqts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.reqt()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReqtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reqt_body(self):
            return self.getTypedRuleContext(RequirementParser.Reqt_bodyContext,0)


        def DIGITS(self):
            return self.getToken(RequirementParser.DIGITS, 0)

        def ID(self):
            return self.getToken(RequirementParser.ID, 0)

        def REQT_ID(self):
            return self.getToken(RequirementParser.REQT_ID, 0)

        def getRuleIndex(self):
            return RequirementParser.RULE_reqt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReqt" ):
                listener.enterReqt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReqt" ):
                listener.exitReqt(self)




    def reqt(self):

        localctx = RequirementParser.ReqtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_reqt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(RequirementParser.T__0)
            self.state = 68
            _la = self._input.LA(1)
            if not(((((_la - 77)) & ~0x3f) == 0 and ((1 << (_la - 77)) & 49) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 69
            self.match(RequirementParser.T__1)
            self.state = 70
            self.reqt_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reqt_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nasa(self):
            return self.getTypedRuleContext(RequirementParser.NasaContext,0)


        def freeform(self):
            return self.getTypedRuleContext(RequirementParser.FreeformContext,0)


        def getRuleIndex(self):
            return RequirementParser.RULE_reqt_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReqt_body" ):
                listener.enterReqt_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReqt_body" ):
                listener.exitReqt_body(self)




    def reqt_body(self):

        localctx = RequirementParser.Reqt_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_reqt_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32, 34, 36, 37, 39, 43, 45, 57, 62, 63, 68, 70, 71, 72, 73, 74, 77]:
                self.state = 72
                self.nasa()
                pass
            elif token in [78]:
                self.state = 73
                self.freeform()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 76
                self.match(RequirementParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FreeformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(RequirementParser.STRING, 0)

        def getRuleIndex(self):
            return RequirementParser.RULE_freeform

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFreeform" ):
                listener.enterFreeform(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFreeform" ):
                listener.exitFreeform(self)




    def freeform(self):

        localctx = RequirementParser.FreeformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_freeform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(RequirementParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NasaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def response(self):
            return self.getTypedRuleContext(RequirementParser.ResponseContext,0)


        def component(self):
            return self.getTypedRuleContext(RequirementParser.ComponentContext,0)


        def SHALL(self):
            return self.getToken(RequirementParser.SHALL, 0)

        def scope(self):
            return self.getTypedRuleContext(RequirementParser.ScopeContext,0)


        def reqt_condition(self):
            return self.getTypedRuleContext(RequirementParser.Reqt_conditionContext,0)


        def timing(self):
            return self.getTypedRuleContext(RequirementParser.TimingContext,0)


        def getRuleIndex(self):
            return RequirementParser.RULE_nasa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNasa" ):
                listener.enterNasa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNasa" ):
                listener.exitNasa(self)




    def nasa(self):

        localctx = RequirementParser.NasaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nasa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 81
                self.scope()


            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 34)) & ~0x3f) == 0 and ((1 << (_la - 34)) & 1047972020737) != 0):
                self.state = 84
                self.reqt_condition()


            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [63, 77]:
                self.state = 87
                self.component()
                self.state = 88
                self.match(RequirementParser.SHALL)
                pass
            elif token in [62]:
                self.state = 90
                self.match(RequirementParser.SHALL)
                self.state = 91
                self.component()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4523781678694416) != 0) or _la==69 or _la==75:
                self.state = 94
                self.timing()


            self.state = 97
            self.response()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ONLY(self):
            return self.getToken(RequirementParser.ONLY, 0)

        def EXCEPT(self):
            return self.getToken(RequirementParser.EXCEPT, 0)

        def IN(self):
            return self.getToken(RequirementParser.IN, 0)

        def scope_mode(self):
            return self.getTypedRuleContext(RequirementParser.Scope_modeContext,0)


        def UNLESS(self):
            return self.getToken(RequirementParser.UNLESS, 0)

        def WHILE(self):
            return self.getToken(RequirementParser.WHILE, 0)

        def scope_condition(self):
            return self.getTypedRuleContext(RequirementParser.Scope_conditionContext,0)


        def WHEN(self):
            return self.getToken(RequirementParser.WHEN, 0)

        def IF(self):
            return self.getToken(RequirementParser.IF, 0)

        def DURING(self):
            return self.getToken(RequirementParser.DURING, 0)

        def AFTER(self):
            return self.getToken(RequirementParser.AFTER, 0)

        def BEFORE(self):
            return self.getToken(RequirementParser.BEFORE, 0)

        def NOT(self):
            return self.getToken(RequirementParser.NOT, 0)

        def getRuleIndex(self):
            return RequirementParser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)




    def scope(self):

        localctx = RequirementParser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [57]:
                self.state = 99
                self.match(RequirementParser.ONLY)
                self.state = 115
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [37, 43, 45, 71]:
                    self.state = 105
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [37]:
                        self.state = 100
                        self.match(RequirementParser.DURING)
                        pass
                    elif token in [43, 45, 71]:
                        self.state = 102
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==43 or _la==71:
                            self.state = 101
                            _la = self._input.LA(1)
                            if not(_la==43 or _la==71):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()


                        self.state = 104
                        self.match(RequirementParser.IN)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 107
                    self.scope_mode()
                    pass
                elif token in [74]:
                    self.state = 108
                    self.match(RequirementParser.WHILE)
                    self.state = 109
                    self.scope_condition()
                    pass
                elif token in [32, 36]:
                    self.state = 110
                    _la = self._input.LA(1)
                    if not(_la==32 or _la==36):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 113
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        self.state = 111
                        self.scope_mode()
                        pass

                    elif la_ == 2:
                        self.state = 112
                        self.scope_condition()
                        pass


                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [39]:
                self.state = 117
                self.match(RequirementParser.EXCEPT)
                self.state = 128
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [37, 43, 45, 71]:
                    self.state = 123
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [37]:
                        self.state = 118
                        self.match(RequirementParser.DURING)
                        pass
                    elif token in [43, 45, 71]:
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==43 or _la==71:
                            self.state = 119
                            _la = self._input.LA(1)
                            if not(_la==43 or _la==71):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()


                        self.state = 122
                        self.match(RequirementParser.IN)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 125
                    self.scope_mode()
                    pass
                elif token in [74]:
                    self.state = 126
                    self.match(RequirementParser.WHILE)
                    self.state = 127
                    self.scope_condition()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [43, 71]:
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==43 or _la==71):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==54:
                    self.state = 131
                    self.match(RequirementParser.NOT)


                self.state = 134
                self.match(RequirementParser.IN)
                self.state = 135
                self.scope_mode()
                pass
            elif token in [37, 45]:
                self.state = 136
                _la = self._input.LA(1)
                if not(_la==37 or _la==45):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 137
                self.scope_mode()
                pass
            elif token in [68]:
                self.state = 138
                self.match(RequirementParser.UNLESS)
                self.state = 139
                self.match(RequirementParser.IN)
                self.state = 140
                self.scope_mode()
                pass
            elif token in [74]:
                self.state = 141
                self.match(RequirementParser.WHILE)
                self.state = 142
                self.scope_condition()
                pass
            elif token in [32, 36]:
                self.state = 143
                _la = self._input.LA(1)
                if not(_la==32 or _la==36):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 146
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 144
                    self.scope_mode()
                    pass

                elif la_ == 2:
                    self.state = 145
                    self.scope_condition()
                    pass


                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 150
                self.match(RequirementParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reqt_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regular_condition(self):
            return self.getTypedRuleContext(RequirementParser.Regular_conditionContext,0)


        def AND(self):
            return self.getToken(RequirementParser.AND, 0)

        def getRuleIndex(self):
            return RequirementParser.RULE_reqt_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReqt_condition" ):
                listener.enterReqt_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReqt_condition" ):
                listener.exitReqt_condition(self)




    def reqt_condition(self):

        localctx = RequirementParser.Reqt_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_reqt_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 153
                self.match(RequirementParser.AND)

